[gd_scene load_steps=14 format=3 uid="uid://hrqmrpxd63wi"]

[ext_resource type="Script" path="res://Scripts/Characters/player-movement.gd" id="1_4e14f"]
[ext_resource type="Texture2D" uid="uid://suyyb1wbaxba" path="res://assets/Mushroom sprite test.png" id="4_e1dow"]
[ext_resource type="PackedScene" uid="uid://c6gemfwgplrco" path="res://hitbox_component.tscn" id="5_0byr4"]
[ext_resource type="PackedScene" uid="uid://bmx61d43c80b5" path="res://health_component.tscn" id="5_4myr6"]
[ext_resource type="Texture2D" uid="uid://c7tq1xiqmu5do" path="res://assets/Light.png" id="5_wtxy5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d51b4"]
radius = 12.0
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0di8c"]
atlas = ExtResource("4_e1dow")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_26ecr"]
atlas = ExtResource("4_e1dow")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqviv"]
atlas = ExtResource("4_e1dow")
region = Rect2(400, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_udm2h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0di8c")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26ecr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqviv")
}],
"loop": true,
"name": &"Right",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h7fao"]
radius = 23.0
height = 52.0

[sub_resource type="Gradient" id="Gradient_8bq8f"]
colors = PackedColorArray(0.980769, 0.980769, 0.980769, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_28vyl"]
gradient = SubResource("Gradient_8bq8f")
fill = 1
fill_from = Vector2(0.478632, 0.508547)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_4e14f")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_d51b4")

[node name="AnimatedSprite2DMushroom" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -10)
scale = Vector2(0.21625, 0.22)
sprite_frames = SubResource("SpriteFrames_udm2h")
animation = &"Right"
autoplay = "Idle"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -3)

[node name="HealthComponent" parent="." instance=ExtResource("5_4myr6")]
MAX_HEALTH = 200.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_0byr4")]
health_component = NodePath("../HealthComponent")
hitbox_category = "player"

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_d51b4")

[node name="IncrementHealth" type="Timer" parent="."]
wait_time = 5.0

[node name="AttackComponent" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent"]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_h7fao")

[node name="Torch" type="PointLight2D" parent="."]
visible = false
position = Vector2(139, -3)
energy = 0.5
shadow_enabled = true
texture = ExtResource("5_wtxy5")
texture_scale = 0.3

[node name="camera_zoom" type="Timer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-1, -25)
scale = Vector2(0.3, 0.3)
energy = 0.4
texture = SubResource("GradientTexture2D_28vyl")

[node name="JumpRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 34)
collision_mask = 2
collide_with_areas = true

[node name="LeftWallRaycast" type="RayCast2D" parent="."]
target_position = Vector2(-28, 0)
collide_with_areas = true

[node name="RightWallRaycast" type="RayCast2D" parent="."]
scale = Vector2(1.00145, 1.01613)
target_position = Vector2(25.9624, 0)
collide_with_areas = true

[connection signal="timeout" from="IncrementHealth" to="." method="_on_increment_health_timeout"]
[connection signal="area_entered" from="AttackComponent" to="." method="_on_attack_component_area_entered"]
[connection signal="area_exited" from="AttackComponent" to="." method="_on_attack_component_area_exited"]
